# rust_agents

./: .env.example  .gitignore  Cargo.toml  README.md  book.toml
.github/workflows/: pages.yml
examples/03-hello/: Cargo.toml
examples/03-hello/src/: main.rs
examples/04-llm-api/: Cargo.toml
examples/04-llm-api/src/: anthropic.rs  lib.rs  main.rs  openai.rs  provider.rs  types.rs
examples/05-structured-output/: Cargo.toml
examples/05-structured-output/src/: main.rs
examples/06-tool-use/: Cargo.toml
examples/06-tool-use/src/: lib.rs  main.rs
examples/07-agent-loop/: Cargo.toml
examples/07-agent-loop/src/: lib.rs  main.rs
examples/08-memory/: Cargo.toml
examples/08-memory/src/: main.rs
examples/11-permissions/: Cargo.toml
examples/11-permissions/src/: main.rs
examples/12-hooks/: Cargo.toml
examples/12-hooks/src/: main.rs
examples/13-skills/: Cargo.toml
examples/13-skills/src/: main.rs
examples/14-subagent/: Cargo.toml
examples/14-subagent/src/: main.rs
examples/15-mcp/: Cargo.toml
examples/15-mcp/src/: client.rs  lib.rs  protocol.rs  server.rs
examples/16-observability/: Cargo.toml
examples/16-observability/src/: main.rs
examples/17-reliability/: Cargo.toml
examples/17-reliability/src/: main.rs
examples/18-evals/: Cargo.toml
examples/18-evals/src/: main.rs
mini-claude-code/crates/mcc-cli/: Cargo.toml
mini-claude-code/crates/mcc-cli/src/: main.rs
mini-claude-code/crates/mcc-config/: Cargo.toml
mini-claude-code/crates/mcc-config/src/: lib.rs
mini-claude-code/crates/mcc-core/: Cargo.toml
mini-claude-code/crates/mcc-core/src/: lib.rs
mini-claude-code/crates/mcc-harness/: Cargo.toml
mini-claude-code/crates/mcc-harness/src/: agent.rs  lib.rs  permission.rs
mini-claude-code/crates/mcc-llm/: Cargo.toml
mini-claude-code/crates/mcc-llm/src/: anthropic.rs  lib.rs  openai.rs
mini-claude-code/crates/mcc-session/: Cargo.toml
mini-claude-code/crates/mcc-session/src/: lib.rs
mini-claude-code/crates/mcc-tools/: Cargo.toml
mini-claude-code/crates/mcc-tools/src/: lib.rs
mini-claude-code/crates/mcc-tui/: Cargo.toml
mini-claude-code/crates/mcc-tui/src/: lib.rs
src/: SUMMARY.md  preface.md
src/appendix/: faq.md  glossary.md  references.md
src/part1/: ch01-what-is-agent.md  ch02-llm-basics.md  ch03-rust-setup.md
src/part2/: ch04-llm-api.md  ch05-prompt-engineering.md  ch06-tool-use.md  ch07-agent-loop.md  ch08-memory.md
src/part3/: ch09-harness-intro.md  ch10-context-engineering.md  ch11-permissions.md  ch12-hooks.md  ch13-skills.md  ch14-subagents.md  ch14a-mcp.md  ch14b-skills-advanced.md
src/part4/: ch15-observability.md  ch16-cost.md  ch17-reliability.md  ch18-evals.md  ch19-security.md
src/part5/: ch20-architecture.md  ch21-cli.md  ch22-tools.md  ch23-main-loop.md  ch24-perms-hooks.md  ch25-session.md  ch26-subagent.md  ch27-deploy.md
src/part6/: ch28-resume.md  ch29-interview.md  ch30-roadmap.md
