[package]
name = "ex04-llm-api"
edition.workspace = true
version.workspace = true

[lib]
name = "ex04_llm_api"
path = "src/lib.rs"

[[bin]]
name = "ex04-llm-api"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
async-stream.workspace = true
