[package]
name = "ex05-structured-output"
edition.workspace = true
version.workspace = true

[dependencies]
ex04-llm-api = { path = "../04-llm-api" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
regex.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
