[package]
name = "ex06-tool-use"
edition.workspace = true
version.workspace = true

[lib]
name = "ex06_tool_use"
path = "src/lib.rs"

[[bin]]
name = "ex06-tool-use"
path = "src/main.rs"

[dependencies]
ex04-llm-api = { path = "../04-llm-api" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
ignore.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
