[package]
name = "ex08-memory"
edition.workspace = true
version.workspace = true

[dependencies]
ex04-llm-api = { path = "../04-llm-api" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
