[package]
name = "ex12-hooks"
edition.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
