[package]
name = "mcc-harness"
edition.workspace = true
version.workspace = true

[dependencies]
mcc-core = { path = "../mcc-core" }
mcc-llm  = { path = "../mcc-llm" }
mcc-tools = { path = "../mcc-tools" }
mcc-session = { path = "../mcc-session" }
mcc-config = { path = "../mcc-config" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
globset.workspace = true
regex.workspace = true
tracing.workspace = true
uuid.workspace = true
